# CS205-Projects

./: .gitignore  .gitmodules  LICENSE  README.md
Project 1-BigInteger Multiplication/: README.md  biginteger.hpp  main.cpp
Project 2-Matrix Multiplication Optimization/: README.md  main.cpp  mat.hpp  out-double-256x256.txt  out-double-32x32.txt  out-float-256x256.txt  out-float-32x32.txt
Project 3-Matrix Multiplication Optimization In Pure C/: CMakeLists.txt  README.md  main.c
Project 3-Matrix Multiplication Optimization In Pure C/include/: matrix.h  timer.h  util.h
Project 3-Matrix Multiplication Optimization In Pure C/src/: matrix.c  timer.c  util.c
Project 3-Matrix Multiplication Optimization In Pure C/txt/: out-256x256-IKJ.txt  out-256x256-OPEN_BLAS.txt  out-32x32-IJK.txt  out-32x32-OPEN_BLAS.txt
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/: CTestTestfile.cmake  OpenBLASConfigVersion.cmake  cmake_install.cmake  openblas.pc  openblas_config.h
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/ctest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/driver/level2/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/driver/level3/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/driver/others/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/interface/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/kernel/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/lapack/: Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/lapack-netlib/TESTING/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/lapack-netlib/TESTING/EIG/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/lapack-netlib/TESTING/LIN/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 3-Matrix Multiplication Optimization In Pure C/xianyi-OpenBLAS-efe4248/utest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Project 4-Matrix Class/: CMakeLists.txt  README.md
Project 4-Matrix Class/file/txt/: mat-A-256.txt  mat-A-32.txt  mat-B-256.txt  mat-B-32.txt
Project 4-Matrix Class/include/: mat.hpp
Project 4-Matrix Class/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.0/: CMakeLists.txt
Project 4-Matrix Class/version/1.0.0/include/: mat.hpp
Project 4-Matrix Class/version/1.0.0/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.1/include/: mat.hpp
Project 4-Matrix Class/version/1.0.1/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.2/: CMakeLists.txt
Project 4-Matrix Class/version/1.0.2/include/: mat.hpp
Project 4-Matrix Class/version/1.0.2/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.3/: CMakeLists.txt
Project 4-Matrix Class/version/1.0.3/include/: mat.hpp
Project 4-Matrix Class/version/1.0.3/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.4/include/: mat.hpp
Project 4-Matrix Class/version/1.0.4/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.5/: CMakeLists.txt
Project 4-Matrix Class/version/1.0.5/include/: mat.hpp
Project 4-Matrix Class/version/1.0.5/src/: main.cpp  mat.tpp
Project 4-Matrix Class/version/1.0.6/: CMakeLists.txt
Project 4-Matrix Class/version/1.0.6/include/: mat.hpp
Project 4-Matrix Class/version/1.0.6/src/: main.cpp  mat.tpp
Project 5-CNN Facedetection/: CMakeLists.txt  README.md
Project 5-CNN Facedetection/include/: facedetection-data.hpp  facedetection.hpp  macro.hpp  mat.hpp
Project 5-CNN Facedetection/src/: facedetection-data.cpp  facedetection.cpp  main.cpp  mat.cpp
